name:                curso-logica
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/carliros/curso-logica#readme
license:             BSD3
license-file:        LICENSE
author:              carlos
maintainer:          carliros.g@gmail.com
copyright:           LICENSE
category:            application
build-type:          Simple
cabal-version:       >=1.10

executable curso-logica
  Hs-Source-Dirs:      src
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*